--- a/README.textile
+++ b/README.textile
@@ -463,11 +463,7 @@ With the figaro gem, just run:
 rake figaro:heroku
 </pre>
 
-Alternatively, you can set Heroku environment variables directly.
-
-The figaro gem version 0.5.0 has a bug and can't run @rake figaro:heroku@.
-
-Set environment variables directly on Heroku with @heroku config:add@.
+Alternatively, you can set Heroku environment variables directly with @heroku config:add@.
 
 <pre>
 $ heroku config:add GMAIL_USERNAME='myname@gmail.com' GMAIL_PASSWORD='secret'
