--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 1.0.11 July 16, 2013
+
+* Stripe API 2013-07-05 version removed 'active_card'
+
 h2. 1.0.10 January 30, 2013
 
 * accommodate change from 'factory_girl_rails' 4.1.0 to 4.2.0 (fix issue #52)
