--- a/README
+++ b/README
@@ -5,6 +5,8 @@ You can use this project as a starting point for a Rails web application.
 
 This Rails 4 branch requires Rails 4 and uses Devise for user management and authentication, CanCan for authorization, Twitter Bootstrap 3 for CSS styling, and Stripe for recurring billing.
 
+This Rails 4 branch is currently : 20140127 : being upgraded by replacing CanCan with Pundit.
+
 Devise
 http://github.com/plataformatec/devise
 
