--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 Rails Stripe Membership Saas
 ========================
 
-You can use this project as a starting point for a Rails web application. It requires Rails 3 and uses Devise for user management and authentication, CanCan for authorization, Twitter Bootstrap for CSS styling, and Stripe for recurring billing.
+You can use this project as a starting point for a Rails web application. 
+
+This Rails 4 branch requires Rails 4 and uses Devise for user management and authentication, CanCan for authorization, Twitter Bootstrap 3 for CSS styling, and Stripe for recurring billing.
+
 
 Devise
 http://github.com/plataformatec/devise
